﻿
28/4/2016:
* FIX: some fixes in scoped vars, type annotations and relevant unit tests


22/4/2016:
* FIX: scoped vars removed from scoped vars env by value


21/4/2016:
* FIX: small fixes on type annotations and auto generalization
* BUG: removal of scoped vars does not work as intended


20/4/2016:
* UP: scoped_vars are now an environment mapping names to records holding the variable and the nesting level
* UP: scoped var nesting levels is used for filtering top-level-introduced vars in generalization


19/4/2016:
* REFACT: ty.kinded_ftv method has been renamed to ftv and now computes an Env mapping vars to kinds instead of a sequence of pairs
* REFACT: ty.fv is now implemented using method ftv
* REFACT: ty.search_var and fxty.search_var do not exist anymore


18/4/2016:
* FIX: fixes in scoped variables


15/4/2016:
* FIX: various fixed in type annotations, type evaluation etc
* UP: wildcards can now be type expressions too (not only type patterns as before)
* FIX: when dealing with type annotations, new type variables are added to the prefix - only those which were not already in it
* FIX: generalization of non-top-level type variables has been restored


12/4/2016:
* FIX: node kind annotation of type expressions has been fixed
* FIX: free vars of type annotations are now inserted into the prefix
* BUG: scoped vars are not generalized at top level


11/4/2016:
* FIX: parser reduce/reduce conflicts fixed
* UP: type function definition now supports co-domain kind annotation, similarly to type annotation of return type in function bindings
* REFACT: monad builders polished and added methods for annotating inferred kind or type into nodes
* REFACT: node class now has only 1 type parameter; member 'typed' has now type object and can be freely used for annotating whatever stuff for the price of one dynamic cast
* UP: both kind inference and type inference now annotate the inferred kind (or type) within the node


6/4/2016: